tests/reference/asr-def_func_02-8bf7092.stderr
semantic error: Number of arguments does not match in the function call
 --> tests/errors/def_func_02.py:5:1
  |
5 | func_02()
  | ^^^^^^^^^ missing 2 required arguments : 'x' and 'y'
